Fix dark mode

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -110,7 +110,7 @@
   }
 
   .tbl-td {
-    @apply border-b border-primary/5 p-2 py-2;
+    @apply border-b border-primary/5 p-2 py-2 dark:border-white/5;
   }
 
   .tbl-hover {
